# csv-explorer

./: README.md  pyproject.toml
src/csv_explorer/: __init__.py  filter_engine.py  formatter.py  loader.py  main.py
tests/: test_filter_engine.py  test_formatter.py  test_loader.py
