[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "csv-explorer"
version = "0.1.0"
description = "Terminal CSV viewer with sorting, filtering, and search"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Nripanka Das"}]
dependencies = [
    "click>=8.0",
]

[project.scripts]
csv-explorer = "csv_explorer.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
